# all-in-one-ai-cli

./: .gitignore  README.md  ROADMAP.md  TEST.md  mcp.example.json  pyproject.toml
.agents/plans/: glow-markdown-renderer.md  tab-autocomplete-plan.md
.aio/: connections.json  tui_history.json
docs/: gemini-cli-vs-aio-comparison.md  project-architecture.md
plans/: README.md
plans/done/: api-autoconfig-json-plan.md  contextual-editor-polish-v2-plan.md  header-styling-plan.md  history-autocomplete-plan.md  phase-1-context-memory.md  textual-rewrite-plan.md  tool-contracts-plan.md
plans/next/: agent-loop-sandbox-plan.md  best-of-breed-adoption-plan.md  llm-provider-expansion-plan.md  project-improvement-plan.md
plans/urgent/: phase-2-file-injection-tools.md  phase-3-agent-loop-v2.md  phase-4-sessions-commands.md  phase-5-mcp-client-headless.md
src/aio/: cli.py
src/aio/agent/: executor.py  planner.py  policy.py  safety.py
src/aio/config/: connections.py  loader.py  schema.py
src/aio/llm/: client.py  router.py
src/aio/logging/: audit.py
src/aio/mcp/: server.py
src/aio/memory/: context.py  session_store.py
src/aio/tools/: csv_tools.py  filesystem.py  git.py  registry.py  shell.py  sql.py
src/aio/tui/: app.py  command_palette.py
src/aio/utils/: errors.py
src/aio/workflows/: runner.py
tests/: test_agent.py  test_cli.py  test_config.py  test_context.py  test_llm.py  test_mcp.py  test_safety.py  test_tools.py  test_tui.py
workflows/: bugfix.yml  research.yml
