[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "all-in-one-ai-cli"
version = "0.1.0"
description = "All-in-one AI CLI scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aio = "aio.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
