[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "all-in-one-ai-cli"
version = "0.1.0"
description = "All-in-one AI CLI scaffold"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["textual>=0.50.0"]

[project.scripts]
aio = "aio.cli:main"
aio-mcp = "aio.mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
